Added dao implementation